fix some bug with slider on mobile version

--- a/css/main.css
+++ b/css/main.css
@@ -763,20 +763,21 @@ button:focus {
   overflow: hidden;
 }
 .slider img {
-  max-width: unset;
+  border-radius: 8px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  max-width: unset !important;
+  height: unset !important;
+  height: 400px !important;
+}
+@media (max-width: 788px) {
+  .slider img {
+    height: 250px !important;
+  }
 }
 
 .slider > div:first-child {
   padding-left: 15px;
-}
-
-.slider__img {
-  border-radius: 8px;
-}
-@media (max-width: 788px) {
-  .slider__img {
-    height: 250px;
-  }
 }
 
 .services {
